feat: were added pagination, cors policy
