# openapi.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.0.0
 servers:
   - description: API для управления активностями в течение суток
-    url: http://localhost:8080/api
+    url: http://localhost:8080/api/v1
 tags:
   - name: intervals
     description: Операции с временными интервалами
@@ -16,6 +16,36 @@ paths:
       description: Возвращает список всех сохраненных временных интервалов
       summary: Получение списка всех сохраненных интервалов
       operationId: getAllIntervals
+      parameters:
+        - name: page
+          in: query
+          required: false
+          description: Номер страницы (начинается с нуля)
+          schema:
+            type: integer
+            minimum: 0
+            maximum: 8640
+            default: 0
+            example: 1
+        - name: size
+          in: query
+          required: false
+          description: Количество элементов на странице
+          schema:
+            type: integer
+            minimum: 10
+            maximum: 100
+            default: 10
+            example: 10
+        - name: sort
+          in: query
+          required: false
+          description: Поле для сортировки и тип сортировки
+          schema:
+            type: string
+            pattern: "^(start|end|type),(asc|desc)$"
+            default: "start,asc"
+            example: "start,asc"
       responses:
         '200':
           description: Успешное получение списка интервалов
